--- a/package.json
+++ b/package.json
@@ -7,7 +7,11 @@
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview",
-    "postinstall": "nuxt prepare"
+    "postinstall": "nuxt prepare",
+    "lint": "yarn lint:eslint && yarn lint:prettier",
+    "lint:eslint": "eslint .",
+    "lint:prettier": "prettier . --check",
+    "lintfix": "eslint . --fix && prettier --write --list-different ."
   },
   "dependencies": {
     "@pinia/nuxt": "^0.5.1",
@@ -16,10 +20,16 @@
     "vue": "latest"
   },
   "devDependencies": {
+    "@nuxt/eslint": "^0.3.13",
     "autoprefixer": "^10.4.19",
+    "eslint": "^9.6.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "postcss": "^8.4.39",
+    "prettier": "^3.3.2",
     "sass": "^1.77.8",
-    "tailwindcss": "^3.4.4"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^5.5.3"
   },
   "overrides": {
     "vue": "latest"
